@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.bermudalocket</groupId>
     <artifactId>ModMode</artifactId>
-    <version>5.0.0-SNAPSHOT</version>
+    <version>5.2</version>
     <packaging>jar</packaging>
     <name>ModMode</name>
     <description>Vanish and ModMode</description>
@@ -23,36 +23,25 @@
             <id>md_5-releases</id>
             <url>http://repo.md-5.net/content/repositories/snapshots/</url>
         </repository>
-
-        <!-- NerdBoard -->
-        <repository>
-            <id>jitpack.io</id>
-            <url>https://jitpack.io</url>
-        </repository>
     </repositories>
 
     <dependencies>
         <dependency>
             <groupId>com.destroystokyo.paper</groupId>
             <artifactId>paper-api</artifactId>
-            <version>1.13.2-R0.1-SNAPSHOT</version>
+            <version>1.16.1-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>me.lucko.luckperms</groupId>
-            <artifactId>luckperms-api</artifactId>
-            <version>4.3</version>
+            <groupId>net.luckperms</groupId>
+            <artifactId>api</artifactId>
+            <version>5.1</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>de.diddiz</groupId>
             <artifactId>logblock</artifactId>
-            <version>1.13.2-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github.NerdNu</groupId>
-            <artifactId>NerdBoard</artifactId>
-            <version>1.0.0</version>
+            <version>1.16.1.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
@@ -70,6 +59,17 @@
                 </includes>
             </resource>
         </resources>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>14</source>
+                    <target>14</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
         <defaultGoal>clean install</defaultGoal>
         <pluginManagement>
             <plugins>
@@ -89,8 +89,8 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.7.0</version>
                     <configuration>
-                        <source>1.8</source>
-                        <target>1.8</target>
+                        <source>14</source>
+                        <target>14</target>
                     </configuration>
                 </plugin>
             </plugins>
